--- a/src/index.html
+++ b/src/index.html
@@ -20,14 +20,14 @@
         </ul>
         <div class="settings">
             <div class="switch">
-                <div>Power</div>
+                <div class="switch__name">Power</div>
                 <input class="switch__input" type="checkbox" id="power">
                 <label class="switch__label" for="power"><span class="visually-hidden">Power</span></label>
             </div>
             <div class="screen"></div>
             <input type="range" max='1' min='0' step='0.01' type='range' id="volume" class="settings__volume">
             <div class="switch">
-                <div>Bank</div>
+                <div class="switch__name">Bank</div>
                 <input class="switch__input" type="checkbox" id="bank">
                 <label class="switch__label" for="bank"><span class="visually-hidden">Bank</span></label>
             </div>
